--- a/index.html
+++ b/index.html
@@ -46,73 +46,17 @@
         import React, { useReducer, useEffect, useRef, useState } from 'https://esm.sh/react@18.2.0';
         import ReactDOM from 'https://esm.sh/react-dom@18.2.0/client';
 
-        // --- SERVICE WORKER REGISTRATION FOR OFFLINE CAPABILITY ---
+        // Your main script (e.g., in index.html or another .js file)
         const registerServiceWorker = () => {
-          if ('serviceWorker' in navigator) {
-            const swCode = `
-              const CACHE_NAME = 'eresus-cache-v5'; // Incremented cache version
-              const urlsToCache = [
-                '/',
-                'https://cdn.tailwindcss.com',
-                'https://esm.sh/react@18.2.0',
-                'https://esm.sh/react-dom@18.2.0/client',
-                'https://145955222.fs1.hubspotusercontent-eu1.net/hubfs/145955222/eResus.jpg'
-              ];
-
-              self.addEventListener('install', event => {
-                event.waitUntil(
-                  caches.open(CACHE_NAME)
-                    .then(cache => {
-                      console.log('Opened cache');
-                      return Promise.all(
-                          urlsToCache.map(url => cache.add(new Request(url, { mode: 'cors' })).catch(err => console.warn('Failed to cache:', url, err)))
-                      );
-                    })
-                );
-              });
-
-              self.addEventListener('fetch', event => {
-                event.respondWith(
-                  caches.match(event.request)
-                    .then(response => {
-                      if (response) { return response; }
-                      return fetch(event.request).then(
-                        networkResponse => {
-                           if(networkResponse && networkResponse.status === 200) {
-                               const responseToCache = networkResponse.clone();
-                               caches.open(CACHE_NAME).then(cache => {
-                                   cache.put(event.request, responseToCache);
-                               });
-                           }
-                           return networkResponse;
-                        }
-                      ).catch(err => {});
-                    })
-                );
-              });
-
-              self.addEventListener('activate', event => {
-                const cacheWhitelist = [CACHE_NAME];
-                event.waitUntil(
-                  caches.keys().then(cacheNames => {
-                    return Promise.all(
-                      cacheNames.map(cacheName => {
-                        if (cacheWhitelist.indexOf(cacheName) === -1) {
-                          return caches.delete(cacheName);
-                        }
-                      })
-                    );
-                  })
-                );
-              });
-            `;
-            const blob = new Blob([swCode], { type: 'application/javascript' });
-            const swUrl = URL.createObjectURL(blob);
-
-            navigator.serviceWorker.register(swUrl)
-              .then(registration => console.log('ServiceWorker registration successful with scope: ', registration.scope))
-              .catch(err => console.log('ServiceWorker registration failed: ', err));
-          }
+        if ('serviceWorker' in navigator) {
+            navigator.serviceWorker.register('/sw.js')
+            .then((registration) => {
+                console.log('ServiceWorker registration successful with scope: ', registration.scope);
+            })
+            .catch((error) => {
+                console.error(`Service worker registration failed: ${error}`);
+            });
+        }
         };
         
         registerServiceWorker();
